<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_workout_plans"
            android:icon="@drawable/baseline_monitor_weight_24"
            android:title="@string/menu_Workout_Plans" />
        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/baseline_add_circle_outline_24"
            android:title="@string/menu_subscription" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/baseline_add_reaction_24"
            android:title="@string/menu_social" />
        <item
            android:id="@+id/nav_trainer"
            android:icon="@drawable/baseline_accessibility_new_24"
            android:title="@string/menu_trainer" />
    </group>
</menu>